--- a/404.html
+++ b/404.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Get In Touch</h3>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>97, WARD NO.13, KISHANI MUHALLA, BARAYTHA ROAD</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+917869622202</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@vidyakunj.edu</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
