--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 text-primary"><i class="fa fa-book-reader me-3"></i>SHRI VIDYAKUNJ PUBLIC SCHOOL</h1>
+                <h1 class="m-0 text-primary"> <img src="img/logo.jpg" alt="Kider Logo" class="img-fluid" style="max-height: 40px; width: auto;" /></i>SHRI VIDYAKUNJ PUBLIC SCHOOL</h1>
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -115,7 +115,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Get In Touch</h3>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>97, WARD NO.13, KISHANI MUHALLA, BARAYTHA ROAD</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+917869622202</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@vidyakunjschool.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
