--- a/appointment.html
+++ b/appointment.html
@@ -156,7 +156,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Get In Touch</h3>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>97, Ward No.13, Kishani Muhalla, Baraytha Road</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+917869622202</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@shri-vidyakunj.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
