--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                         <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                             <i class="fa fa-phone-alt fa-2x text-primary"></i>
                         </div>
-                        <h6>+91 123 456 7890</h6>
+                        <h6>+917869622202</h6>
                     </div>
                 </div>
                 <div class="bg-light rounded">
@@ -173,7 +173,7 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>97, WARD NO.13, KISHANI MUHALLA, BARAYTHA ROAD</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+917869622202</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@svps.edu</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
