--- a/testimonial.html
+++ b/testimonial.html
@@ -88,7 +88,8 @@
             </div>
         </div>
         <!-- Page Header End -->
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pxe3iC0DQCA?si=wGzR_Dftd-dXvJUN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bSvKQlrcl2w?si=69mW64gJje4WKA7-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <!-- Testimonial Start -->
 <div class="container-xxl py-5">
@@ -122,7 +123,7 @@
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>97, WARD NO.13, KISHANI MUHALLA, BARAYTHA ROAD</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+917869622202</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@svps.edu</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
